--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
-py-clob-client==0.20.0
-python-dotenv
+py-clob-client>=0.24.0
+python-dotenv==1.1.1
 pandas
 gspread
 gspread-dataframe
 sortedcontainers
 black==24.4.2
-eth-account===0.13.0
-eth-utils===4.1.1
+eth-account>=0.13.0
+eth-utils>=5.0.0
 poly_eip712_structs==0.0.1
-py_order_utils==0.3.2
+py_order_utils>=0.3.2
 pytest==8.2.2
-python-dotenv==0.19.2
 requests==2.32.3
 websockets==12.0
 cryptography==42.0.8
-asyncio
-requests
 google-auth
-web3==5.3.1
+setuptools
+web3>=7.6.0
