--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,8 @@ trafilatura
 python-dateutil
 tqdm
 openai>=1.37.0
+httpx>=0.27.0
+tenacity>=8.4.1
+beautifulsoup4>=4.12.3
+html2text>=2024.2.26
+curl_cffi
